# Projet-MAOA-PD-TSP

./: .gitignore
pd-tsp-solver/: Cargo.toml  IMPROVEMENTS_SUMMARY.md  README.md  analyze_benchmark.py  analyze_results.py  gurobi_iis.ilp  n100mosA_greedy_linear.json  n100mosA_greedy_quad.json  n20mosA_exact.json  n20mosA_greedy.json  n20mosA_greedy2.json  run_benchmark_n100.ps1  run_benchmark_n100_beta.ps1  run_benchmark_n200_quick.ps1
pd-tsp-solver/benchmark_n100/n100q1000/: n100q1000A.tsp  n100q1000B.tsp  n100q1000C.tsp  n100q1000D.tsp  n100q1000E.tsp  n100q1000F.tsp  n100q1000G.tsp  n100q1000H.tsp  n100q1000I.tsp  n100q1000J.tsp
pd-tsp-solver/benchmark_n200/: n200mosA.tsp  n200mosB.tsp  n200mosC.tsp  n200q10A.tsp  n200q10B.tsp  n200q10C.tsp
pd-tsp-solver/report/: analyze_and_plot.py  rapport.tex
pd-tsp-solver/report/figs/: beta_sweep_summary.csv  linear_vs_quadratic_deltas.csv  n100q45A_exact.json  n20mosA_exact.json
pd-tsp-solver/results/benchmark_complete/: results.csv  results_beta.csv
pd-tsp-solver/results/benchmark_complete_n100/: results.csv  results_quadratic.csv
pd-tsp-solver/results/benchmark_n200_quick/: results_n200_quick.csv
pd-tsp-solver/scripts/: aggregate_quadratic_results.py  aggregate_results.py  analyze_single_instance.py  compare_linear_quadratic.py  convert_svgs.py  generate_plots.py  prepare_results_for_plots.py  run_benchmarks.py  run_quadratic_sensitivity.py  visualize_solution.py
pd-tsp-solver/src/: benchmark.rs  instance.rs  lib.rs  main.rs  solution.rs  visualization.rs
pd-tsp-solver/src/exact/: gurobi.rs  mod.rs
(+6 files in other folders)
