[package]
name = "pd-tsp-solver"
version = "1.0.0"
edition = "2021"
authors = ["Etudiant M2 AI2D"]
description = "A comprehensive solver for the Pickup and Delivery Traveling Salesman Problem (PD-TSP) with multiple heuristics and Gurobi integration"
license = "MIT"

[dependencies]
# Core dependencies
rand = "0.8"
rand_chacha = "0.3"
ordered-float = "4.2"
rayon = "1.8"
indicatif = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# CLI and logging
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

# Timing and statistics
chrono = "0.4"
statrs = "0.16"

# Gurobi bindings (grb crate)
grb = { version = "2.0", optional = true }

# Native SVG rendering dependencies
resvg = "0.30"

[features]
default = []
gurobi = ["grb"]
resvg = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
